<resources>

    <string name="app_name" translatable="false">莱瘦</string>
    <string name="nv_index" translatable="false">首页</string>
    <string name="nv_info" translatable="false">消息</string>
    <string name="nv_me" translatable="false">我的</string>
    <string name="nv_setting" translatable="false">设置</string>
    <string name="nv_unit" translatable="false">莱瘦圈</string>
    <string name="nv_discount" translatable="false">莱购</string>

    <string name="requestError" translatable="false">网络状态不佳，请稍后再试！</string>
    <string name="error" translatable="false">当前操作发生错误，请稍后再试！</string>


    <string name="index_menu_hd" translatable="false">热门活动</string>
    <string name="index_menu_gw" translatable="false">莱瘦顾问</string>
    <string name="index_menu_sign_in" translatable="false">每日签到</string>
    <string name="index_menu_ly" translatable="false">莱瘦乐园</string>

    <string name="custom_activity" translatable="false">参加活动</string>
    <string name="custom_article" translatable="false">分享文章</string>
    <string name="custom_integral" translatable="false">积分兑换</string>
    <string name="custom_lpt" translatable="false">莱拼团</string>

    <string name="me_menu_cj" translatable="false">我的成绩</string>
    <string name="me_menu_qz" translatable="false">我的相册</string>
    <string name="me_menu_club" translatable="false">我的俱乐部</string>
    <string name="me_menu_gj" translatable="false">我的管家</string>

    <string name="discount_menu_hot" translatable="false">热卖</string>
    <string name="discount_menu_discount" translatable="false">精选特惠</string>
    <string name="discount_menu_fruit" translatable="false">热卖水果</string>
    <string name="discount_menu_frozen" translatable="false">水产冻品</string>
    <string name="discount_menu_food" translatable="false">休闲食品</string>
    <string name="discount_menu_jmhf" translatable="false">洁面护肤</string>
    <string name="discount_menu_sjsm" translatable="false">手机数码</string>

    <string name="discount_menu_rx" translatable="false">热销</string>
    <string name="discount_menu_fw" translatable="false">服务</string>
    <string name="discount_menu_js" translatable="false">健身</string>
    <string name="discount_menu_cy" translatable="false">餐饮</string>
    <string name="discount_menu_fz" translatable="false">服装</string>


    <string name="hot_menu_yl" translatable="false">毅力</string>
    <string name="hot_menu_gy" translatable="false">公益</string>
    <string name="hot_menu_jh" translatable="false">聚会</string>
    <string name="hot_menu_px" translatable="false">培训</string>
    <string name="hot_menu_ly" translatable="false">旅游</string>
    <string name="hot_menu_yd" translatable="false">运动</string>
    <string name="hot_menu_mr" translatable="false">美容</string>
    <string name="hot_menu_cy" translatable="false">才艺</string>
    <string name="hot_menu_dy" translatable="false">电影</string>
    <string name="hot_menu_qb" translatable="false">全部</string>

    <string name="version_unknown" translatable="false">请求异常</string>
    <string name="noData" translatable="false">暂无数据</string>

    <string name="state_network_error" translatable="false">网络错误</string>
    <string name="state_loading" translatable="false">正在加载…</string>
    <string name="state_not_more" translatable="false">没有更多数据</string>
    <string name="state_load_error" translatable="false">加载失败</string>
    <string name="state_refreshing" translatable="false">正在刷新</string>
    <string name="state_loading_error" translatable="false">数据加载中&#8230;</string>
    <string name="state_submit" translatable="false">正在提交中&#8230;</string>
    <string name="state_loading_again" translatable="false">点击图标,重新加载</string>

    <string name="login_user_hint" translatable="false">手机号</string>
    <string name="login_pwd_hint" translatable="false">密码或验证码</string>


    <string name="setting_update" translatable="false">检查更新</string>
    <string name="setting_qrcode" translatable="false">扫描二维码</string>
    <string name="setting_about" translatable="false">关于我们</string>
    <string name="setting_ITSupport" translatable="false">技术支持</string>
    <string name="setting_customes" translatable="false">智能管家</string>
    <string name="setting_feedBack" translatable="false">问题反馈</string>


    <string name="setting_exit" translatable="false">退出账号</string>
    <string name="manageapplications_settings_title" translatable="false">应用中心</string>
    <string name="manageapplications_settings_summary" translatable="false">应用中心</string>
    <string name="settings" translatable="false">设置</string>
    <string name="string_help_text" translatable="false">缺少权限，请检查设置</string>

    <string name="lockViewTips" translatable="false">该密码用于应用解锁和锁屏后再次使用时的安全验证</string>
    <string name="set_lockView" translatable="false">请设置手势密码</string>

    <string name="permission_get_accounts_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint" translatable="false">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="last_news" translatable="false">最新资讯</string>

    <string name="order" translatable="false">我的订单</string>
    <string name="houseResource" translatable="false">房源管理</string>
    <string name="collect" translatable="false">我的关注</string>
    <string name="certificationManager" translatable="false">认证管理</string>
    <string name="contract" translatable="false">我的合同</string>
    <string name="bankCard" translatable="false">银行卡</string>
    <string name="evaluate" translatable="false">我的评价</string>
    <string name="record" translatable="false">浏览记录</string>
    <string name="pay" translatable="false">房租支付</string>

    <string name="searchview_query_hint" translatable="false">请输入关键字、标签</string>


    <string name="pullToRefresh" translatable="false">下拉刷新</string>
    <string name="loosenToRefresh" translatable="false">松开刷新</string>
    <string name="refreshing" translatable="false">正在刷新</string>

    <string name="mis_folder_all">All Images</string>
    <string name="mis_preview">Preview</string>
    <string name="mis_msg_no_camera">No system camera found</string>
    <string name="mis_msg_amount_limit">Select images amount is limit</string>
    <string name="mis_action_done">Done</string>
    <string name="mis_action_button_string" translatable="false">%1$s(%2$d/%3$d)</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_tip_take_photo">Take photo</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_error_no_permission">Has no permission</string>
    <string name="mis_permission_dialog_title">Permission Deny</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">CANCEL</string>
    <string name="mis_permission_rationale">Storage read permission is needed to pick files.</string>
    <string name="mis_permission_rationale_write_storage">Storage write permission is needed to save the image.</string>

</resources>
