<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:clickable="true"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <View style="@style/h_area" />

    <LinearLayout
        style="@style/setting_item"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tipsAlert"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="消息提醒设置"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ToggleButton
            android:id="@+id/tglSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x20"
            android:layout_marginBottom="@dimen/x20"
            android:background="@drawable/selector_butn_toggle"
            android:checked="true"
            android:layout_weight="1"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>
    <View
        style="@style/h_line"
        android:layout_marginLeft="@dimen/x25" />
    <LinearLayout
        style="@style/setting_item"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="手势密码"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <ToggleButton
            android:id="@+id/gesturesPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x20"
            android:layout_marginBottom="@dimen/x20"
            android:background="@drawable/selector_butn_toggle"
            android:checked="true"
            android:layout_weight="1"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>
    <View
        style="@style/h_line"
        android:layout_marginLeft="@dimen/x25" />

    <LinearLayout
        style="@style/setting_item"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="清理缓存"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cleanUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="0.0M"
            android:textColor="#888888"
            android:textSize="13.5sp" />
    </LinearLayout>

    <View
        style="@style/h_line"
        android:layout_marginLeft="@dimen/x25" />

    <LinearLayout
        android:id="@+id/checkUpdate"
        style="@style/setting_item"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/setting_update"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/versionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="v1.0"
            android:textColor="#888888"
            android:textSize="13.5sp" />
    </LinearLayout>

    <View style="@style/h_area" />

    <TextView
        android:id="@+id/aboutUs"
        style="@style/setting_item"
        android:background="@color/white"
        android:visibility="gone"
        android:drawableRight="@mipmap/ic_arrow_right"
        android:text="@string/setting_about" />

    <View
        style="@style/h_line"
        android:visibility="gone"
        android:layout_marginLeft="15dp" />

    <TextView
        android:id="@+id/feedBack"
        style="@style/setting_item"
        android:background="@color/white"
        android:drawableRight="@mipmap/ic_arrow_right"
        android:text="@string/setting_feedBack" />
    <View
        style="@style/h_line"
        android:layout_marginLeft="15dp" />
    <LinearLayout
        style="@style/setting_item"
        android:background="@color/white"
        android:clickable="false"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ITSupport"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:clickable="false"
            android:text="@string/setting_ITSupport" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:text="安徽三实"
            android:clickable="false"
            android:textColor="#888888"
            android:textSize="13.5sp" />
    </LinearLayout>

    <View
        style="@style/h_line"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/x25" />

    <Button
        android:id="@+id/setting_exit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x88"
        android:layout_marginTop="@dimen/x30"
        android:background="@color/themeColor"
        android:elevation="0dp"
        android:text="@string/setting_exit"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        tools:targetApi="lollipop" />
</LinearLayout>
